--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
     "@11ty/eleventy": "^2.0.1"
+  },
+  "devDependencies": {
+    "markdown-it-anchor": "^9.2.0",
+    "markdown-it-table-of-contents": "^0.8.0"
   }
 }
