--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "start": "eleventy --serve",
+    "build": "eleventy"
+  },
   "dependencies": {
     "@11ty/eleventy": "^2.0.1"
   },
